<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">LeMonde</string>

    <!-- MainActivity: Right menu settings -->
    <string name="action_account">Mon compte</string>
    <string name="action_settings">Paramètres</string>

    <!-- Drawer -->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="category_fav">Favoris</string>
    <string name="category_news">À la Une</string>
    <string name="category_international">International</string>
    <string name="category_politics">Politique</string>
    <string name="category_society">Société</string>
    <string name="category_economy">Économie</string>
    <string name="category_culture">Culture</string>
    <string name="category_ideas">Idées</string>
    <string name="category_planet">Planète</string>
    <string name="category_sports">Sports</string>
    <string name="category_sciences">Sciences</string>
    <string name="category_pixels">Pixels</string>
    <string name="category_campus">Campus</string>
    <string name="category_decoders">Les décodeurs</string>
    <string name="category_videos">Vidéos</string>

    <!-- Drawer header -->
    <string name="drawer_header_img_content_desc">Image par défaut</string>
    <string name="drawer_header_username">Non connecté</string>
    <string name="drawer_header_email">Accéder à mon compte</string>

    <!-- Article -->
    <string name="no_more_comments_to_load">Pas de nouveau commentaire</string>
    <string name="transition_open_article">transition_open_article</string>
    <string name="open_tweet_external">Voir dans Twitter</string>
    <string name="share_article">Partager cet article</string>
    <string name="live_facts">Les faits</string>
    <string name="live_events">Suivez le live de l’événement</string>
    <string name="register">S’abonner</string>
    <string name="restricted_content">L’accès à la totalité de l’article est protégé</string>
    <string name="favorites_article_removed">Article supprimé des favoris</string>
    <string name="favorites_article_added">Article ajouté aux favoris</string>
    <string name="graph_source">Source</string>

    <!-- Bubble tag of article -->
    <string name="paid_article">Article Abonnés</string>
    <string name="video_article">Vidéo</string>
    <string name="live_article">Live</string>
    <string name="blog_article">Article de blog</string>
    <string name="large_article">Grands Formats</string>
    <string name="image_from_article">Image de l’article</string>

    <!-- Favorites -->
    <string name="favorites_title_activity">Favoris</string>
    <string name="favorites_none_found">Aucun favori sauvegardé</string>

    <!-- Strings related to errors -->
    <string name="error_no_connection">Aucune connexion Internet</string>
    <string name="error_no_connection_retry">Réessayer</string>
    <string name="error_timeout">Connexion limitée : impossible de récupérer le flux</string>

    <!-- Strings related to Settings -->
    <string name="preference_article_layout">Mise en page</string>
    <string name="preference_article_content">Contenu des articles</string>
    <string name="preference_article_display_tweets">Inclure les tweets dans le corps d’un article</string>
    <string name="preference_general_display">Affichage</string>
    <string name="preference_app_style">Style de l’App</string>
    <string name="preference_app_dark_theme">Thème sombre</string>
    <string name="preference_share_icons">Icône de partage</string>
    <string name="preference_share_description">Activer le partage d’un article (email, réseaux sociaux, etc.)</string>

    <string name="login_activity_title">Connexion</string>

    <!-- Strings related to login -->
    <string name="snackbar_not_implemented">Non implémenté</string>
    <string name="snackbar_error_when_auth">Impossible de se connecter</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion</string>
    <string name="error_invalid_email">Cette adresse email est invalide</string>
    <string name="error_invalid_password">Le mot de passe est trop court</string>
    <string name="error_field_required">Champ obligatoire</string>
    <string name="user_avatar">User avatar</string>
</resources>
