<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preference_article_layout">
        <SwitchPreference
            android:defaultValue="false"
            android:key="displayTweets"
            android:summary="@string/preference_article_display_tweets"
            android:title="@string/preference_article_content" />
        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="autoloadComments"
            android:summary="@string/preference_article_autoload_comments"
            android:title="@string/preference_article_comments" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_general_display">
        <SwitchPreference
            android:defaultValue="true"
            android:key="mainTheme"
            android:summary="@string/preference_app_dark_theme"
            android:title="@string/preference_app_style" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="shareOnSocialNetworks"
            android:summary="@string/preference_share_description"
            android:title="@string/preference_share_icons" />
    </PreferenceCategory>

</PreferenceScreen>
