<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tweet_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="16dp"
    android:elevation="2dp"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="0dp"
    tools:targetApi="LOLLIPOP">

    <TextView
        android:id="@+id/restricted_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/restricted_content" />

    <LinearLayout
        android:id="@+id/tweet_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:orientation="horizontal"
        android:padding="0dp">

        <Button
            android:id="@+id/login_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:onClick="goToAccount"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/login_activity_title"
            android:textSize="12sp"
            android:typeface="normal" />

        <Button
            android:id="@+id/register_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:onClick="register"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/register"
            android:textSize="12sp"
            android:typeface="normal" />

        <Space
            android:id="@+id/tweet_space"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
